src/objects/Revenue__c.object
<CustomObject>
    <fields>
        <fullName>Administrative_Fee__c</fullName>
        <inlineHelpText>Administrative fee assessed and included in this invoice total</inlineHelpText>
        <label>Administrative Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Billed_to_Client__c</fullName>
        <formula>IF((Amount__c - Total_from_Overpayment__c ) &lt; 0,0,Amount__c - Total_from_Overpayment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Billed to Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Invoiced or draw down amount</inlineHelpText>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <inlineHelpText>Check date of an invoice payment by check</inlineHelpText>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <inlineHelpText>Check number of an invoice payment check</inlineHelpText>
        <label>Check Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <displayFormat>INV-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Legacy_Job_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Job ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mark_Items__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This field indicates that expenses, materials, and time logs related to this revenue should be marked with this records Id.</inlineHelpText>
        <label>Mark_Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <formula>Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <inlineHelpText>The project (Opportunity) associated with this particular invoice</inlineHelpText>
        <label>Project</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revenues</relationshipLabel>
        <relationshipName>Revenue</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Draw_Down_Amount__c</fullName>
        <formula>Related_Draw_Down__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>In the case of monthly project costs including both an invoice and a draw down, Amount of the related draw down that was also included in payment of these monthly costs, if both a draw down and additional invoice were required to cover costs this month.</inlineHelpText>
        <label>Related Draw Down Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Draw_Down__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this particular invoice covered costs for the month that also pulled from a reserved grant or deposit that was drawn down during the month, this is the link to that related draw down record.</inlineHelpText>
        <label>Related Draw Down</label>
        <referenceTo>Revenue__c</referenceTo>
        <relationshipLabel>Revenues</relationshipLabel>
        <relationshipName>Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Grant_or_Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Grant</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Draw Downs</relationshipLabel>
        <relationshipName>Draw_Down</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Draw Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Estimated</fullName>
                </value>
                <value>
                    <fullName>Ready for Invoice</fullName>
                </value>
                <value>
                    <fullName>Invoice Sent</fullName>
                </value>
                <value>
                    <fullName>Invoice Sent &amp; Entered in QB</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Past Due</fullName>
                </value>
                <value>
                    <fullName>Spent</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Balance_Due__c</fullName>
        <formula>Amount_Billed_to_Client__c  -  Total_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <formula>Related_Draw_Down__r.Amount__c +  Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total revenue for this invoice, included related draw downs</inlineHelpText>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Written_Off__c</fullName>
        <label>Total Written Off</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_from_Overpayment__c</fullName>
        <label>Total from Deposit or Overpayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Revenue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ready_for_Invoice</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Amount__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Ready for Invoice</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>lessThan</operation>
            <value>7/5/2012</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Revenue__c.Invoice</value>
        </filters>
        <label>Ready for Invoice</label>
    </listViews>
    <nameField>
        <label>Revenue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenues</pluralLabel>
    <recordTypes>
        <fullName>Draw_Down</fullName>
        <active>true</active>
        <label>Draw Down</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invoice</fullName>
        <active>true</active>
        <label>Invoice</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>